update OrderTable spilit and serch ,delete

--- a/shopServer/templates/base.html
+++ b/shopServer/templates/base.html
@@ -333,7 +333,7 @@
 							</a>
 							<ul class="treeview-menu">
 								<li>
-									<a href="###"><i class="fa fa-dashboard"></i> 管理员管理</a>
+									<a href="/luckyManage/"><i class="fa fa-dashboard"></i> 福袋管理</a>
 								</li>
 								<li class="active">
 									<a href="/userManage/"><i class="fa fa-dashboard"></i> 会员管理</a>
@@ -376,7 +376,7 @@
 									<a href="/redpack/"><i class="fa fa-flag"></i> 红包设置</a>
 								</li>
 								<li class="active">
-									<a href="/cartsManage/"><i class="fa fa-flag"></i> 店铺消费记录</a>
+									<a href="home/"><i class="fa fa-flag"></i> 店铺消费记录</a>
 								</li>
 							</ul>
 						</li>
