--- a/shopServer/templates/orderManage.html
+++ b/shopServer/templates/orderManage.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %} {% load staticfiles %} {% block content %}
 <div class="container-fluid ">
 	<div class="row ">
 
@@ -95,6 +95,7 @@
 
 	{% endblock %} {% block contentLeft %} 订单管理
 	<small>Version 5.0</small> {% endblock %} {% block script %}
+	<script src="{% static 'layer/layer.js' %}" type="text/javascript" charset="utf-8"></script>
 	<script>
         var thispage = 1
 
@@ -141,7 +142,7 @@
 					orderListToPage(mainData)
 					$("#orderCount").text(ordercount)
 					$("#visible-pages-example").children(".sumdiv").remove()
-					var spanele = '<span class="sumdiv">共' + orderListPages + '页,当前第' + thispage + '页,共' + ordercount + '条数据</span>'
+					var spanele = '<span class="sumdiv">共' + orderListPages + '页,当前第' + thispage + '页</span>'
 					$("#visible-pages-example").append($(spanele))
 					
 					$('#visible-pages-example').twbsPagination({
@@ -171,10 +172,8 @@
 		//解析数据 data为数组
 		
 		$(".AllDelete").click(function(){
-            console.log("批量删除");
             $("[name = checkbox-one]:checkbox").each(function () {
                 if ($(this).is(":checked")) {
-                    console.log("xuanzhong");
                     var that = $(this).parents('tr');
                     var objData = that.attr('orderid')
                     myPost("ordertableDelete" , {orderid:objData} , function () {
@@ -187,15 +186,12 @@
 
         $('#checkbox-all').click(function () {
             if($('#checkbox-all').is(':checked')) {
-                console.log("get - all")
                 $(".checkbox-one").prop("checked",true);
             }else{
-                console.log("close - all")
                 $(".checkbox-one").prop("checked",false);
             }
         })
 		function ajaxSubmitForm(){
-			console.log('ajaxsubmit');
 			var option = 
 			{
 				url : "http://localhost:8000/ordertabalelistJaon/",
@@ -204,6 +200,12 @@
 				success : function(data)
 				{   
 					newData = data.data
+					if(data.data!=""){
+						layer.msg("查找成功")
+					}
+					else{
+						layer.msg("查找失败")
+					}
 					$('.mytr').remove();
 					orderListToPage(newData)
 					
