--- a/shopServer/templates/userManage.html
+++ b/shopServer/templates/userManage.html
@@ -143,6 +143,9 @@
            
         </div>
         
+        
+        
+        <!-- <div class="form-group"><label for="recipient-name" class="control-label">头像:</label><input type="text" class="form-control" name="headimg" value="' + headimg + '"></div> -->
 
 {% endblock %}
 
@@ -236,7 +239,7 @@ $(".addform").on('submit', function(e){
                 var power = that.attr('power');
                 var activecode = that.attr('activecode');
                 console.log(username);
-                var ele = '<div class="modal fade bs-example-modal-sm theEditModal" id="editModal' + userid + '" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"><div class="modal-dialog" role="document"><div class="modal-content"><div class="modal-header"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button><h4 class="modal-title">修改会员资料</h4></div><div class="modal-header" id="updetaModal"><form class="editFormContent" action="http://localhost:8000/userManageJsonUpdate/" method="post"><div class="form-group"><label for="recipient-name" class="control-label">序号：</label><input type="text" class="form-control" name="userid" value="' + userid + '" readonly="readonly"></div><div class="form-group"><label for="recipient-name" class="control-label">会员名:</label><input type="text" class="form-control" name="username" value="' + username + '"></div><div class="form-group"><label for="recipient-name" class="control-label">密码:</label><input type="text" class="form-control" name="pwd" value="' + pwd + '"></div><div class="form-group"><label for="recipient-name" class="control-label">电话:</label><input type="text" class="form-control" name="phone" value="' + phone + '"></div><div class="form-group"><label for="recipient-name" class="control-label">微信:</label><input type="text" class="form-control" name="wxid" value="' + wxid + '"></div><div class="form-group"><label for="recipient-name" class="control-label">头像:</label><input type="text" class="form-control" name="headimg" value="' + headimg + '"></div><div class="form-group"><label for="recipient-name" class="control-label">账户余额:</label><input type="text" class="form-control" name="acountmoney" value="' + acountmoney + '"></div><div class="form-group"><label for="recipient-name" class="control-label">等级:</label><input type="text" class="form-control" name="power" value="' + power + '"></div><div class="form-group"><label for="recipient-name" class="control-label">激活码:</label><input type="text" class="form-control" name="activecode" value="' + activecode +'"></div><input type="submit" class="btn btn-primary" value="更新"></form></div></form></div></div></div></div>'
+                var ele = '<div class="modal fade bs-example-modal-sm theEditModal" id="editModal' + userid + '" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"><div class="modal-dialog" role="document"><div class="modal-content"><div class="modal-header"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button><h4 class="modal-title">修改会员资料</h4></div><div class="modal-header" id="updetaModal"><form class="editFormContent" action="http://localhost:8000/userManageJsonUpdate/" method="post"><div class="form-group"><label for="recipient-name" class="control-label">序号：</label><input type="text" class="form-control" name="userid" value="' + userid + '" readonly="readonly"></div><div class="form-group"><label for="recipient-name" class="control-label">会员名:</label><input type="text" class="form-control" name="username" value="' + username + '"></div><div class="form-group"><label for="recipient-name" class="control-label">密码:</label><input type="text" class="form-control" name="pwd" value="' + pwd + '"></div><div class="form-group"><label for="recipient-name" class="control-label">电话:</label><input type="text" class="form-control" name="phone" value="' + phone + '"></div><div class="form-group" enctype="multipart/form-data"><label for="recipient-name" class="control-label">头像:</label><input type="file" accept="image/gif, image/jpeg" class="form-control" name="headimg" value="' + headimg + '"></div><div class="form-group"><label for="recipient-name" class="control-label">账户余额:</label><input type="text" class="form-control" name="acountmoney" value="' + acountmoney + '"></div><div class="form-group"><label for="recipient-name" class="control-label">等级:</label><input type="text" class="form-control" name="power" value="' + power + '"></div><div class="form-group"><label for="recipient-name" class="control-label">激活码:</label><input type="text" class="form-control" name="activecode" value="' + activecode +'"></div><input type="submit" class="btn btn-primary" value="更新"></form></div></form></div></div></div></div>'
                 $(".myModal").empty();
                 
                 $(".myModal").append(ele)
@@ -309,7 +312,15 @@ $(".addform").on('submit', function(e){
             success : function(data)
             {   
                 console.log(data);
+                if(data.data!=""){
+                    layer.msg("查找成功")
+                }
+                else{
+                    layer.msg("查找失败")
+                }
                 $('.mytr').remove();
+                document.getElementById("exampleUsername").value = "";
+				document.getElementById("exampleInputPhoneNumber").value = "";
                 dataParse(data);
                 
             },
